2014-03-24  6.8.9-0 Cristy  <quetzlzacatenango@image...>
  * Don't transform sRGB compatible colorspaces to sRGB, doing so
    inadvertingly promotes colormapped images to DirectClass.

2014-03-23  6.8.8-10 Cristy  <quetzlzacatenango@image...>
  * Although they are internal methods, deprecate InitializeModuleList(),
2014-03-28  6.8.8-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-9, SVN revision 15239.

2014-03-23  6.8.8-10 Cristy  <quetzlzacatenango@image...>
  * Although they are internal methods, deprecate InitializeModuleList(),
    LoadMimeLists(), and RelinquishCommandQueue() (reference
   http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25263).

2014-03-20  6.8.8-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-9, SVN revision 15192.

2014-03-16  6.8.8-9 Glenn Randers-Pehrson <glennrp@image...>
  * Do not block threads in the png codec when PNG_SETJMP_SUPPORTED is not
    defined (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=25218).

2014-03-15  6.8.8-9 Dirk Lemstra <dirk@snakeware...>
  * Added tiff:ignore-tags to ignore specific tags.
  * Added orderedDither, selectiveBlur, separate, sepiaTone, sketch,
    smushImages, tint, uniqueColors and vignette to Magick++.

2014-03-11  6.8.8-9 Cristy  <quetzlzacatenango@image...>
  * The -define jpeg:extent option overrides the image quality (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25200). 

2014-03-09  6.8.8-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.8-8, SVN revision 15097.

2014-03-04  6.8.8-8 Glenn Randers-Pehrson <glennrp@image...>
  * Reset colorspace to Grayscale when reading a gray PNG image with
    gamma > 0.75 instead of when gamma==1.0 (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25136).

2014-02-22  6.8.8-8 Dirk Lemstra <dirk@snakeware...>
  * The PSD reader creates a merged image if the image does not contain one.