@@ -1,3 +1,7 @@
+2014-03-30  6.8.9-0 Dirk Lemstra <dirk@snakeware...>
+  * Added new coder to take a screen shot of a monitor in Windows (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=25191)
+
 2014-03-24  6.8.9-0 Cristy  <quetzlzacatenango@image...>
   * Don't transform sRGB compatible colorspaces to sRGB, doing so
     inadvertingly promotes colormapped images to DirectClass.
